--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.25.0
-pickle==4.0
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-intel==2.14.0
-tensorflow-io-gcs-filesystem==0.31.0
-regex==2023.6.3
-streamlit==1.29.0
-streamlit-keyup==0.2.0
+streamlit
+streamlit-keyup
+numpy
+pickle
+tensorflow
+tensorflow-estimator
+tensorflow-intel
+tensorflow-io-gcs-filesystem
+regex
